--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,11 @@ button {
 
 .about-text .tab-content {
     padding: 40px 0;
+    display: none;
+}
+
+.about-text .tab-content.active {
+    display: block;
 }
 
 .about-text .timeline-item {
