--- a/css/style.css
+++ b/css/style.css
@@ -437,14 +437,23 @@ button {
     height: 100%;
     width: 100%;
     z-index: 200;
+    overflow-y: auto ;
 }
 
 .pp-inner {
     min-height: 100vh;
     padding: 40px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .pp-content {
     background-color: var(--white-alpha-25);
     padding: 30px;
+    border-radius: 30px;
+    max-width: 900px;
+    width: 100%;
+    border: 1px solid var(--white-alpha-40);
+    backdrop-filter: var(--backdrop-filter-blur);
 }
