--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ body {
     -webkit-tap-highlight-color: transparent;
     padding: 5vh 15px;
 }
+
+body.hide-scrolling {
+    overflow-y: hidden;
+}
+
 body::before {
     content: '';
     position: fixed;
@@ -77,6 +82,10 @@ img {
     vertical-align: middle;
 }
 
+ul {
+    list-style: none;
+}
+
 section {
     background-color: var(--white-alpha-25);
     border: 1px solid var(--white-alpha-40);
@@ -88,6 +97,11 @@ section {
 .main {
     max-width: 1200px;
     margin: auto;
+    transition: all 0.5s ease-in-out;
+}
+
+.main.fade-out {
+    opacity: 0;
 }
 
 .container {
@@ -437,7 +451,13 @@ button {
     height: 100%;
     width: 100%;
     z-index: 200;
+    visibility: hidden; /* hides the pop up */
     overflow-y: auto ;
+}
+
+.portfolio-popup.open {
+    visibility: visible;
+    overflow-y: auto;
 }
 
 .pp-inner {
@@ -456,4 +476,57 @@ button {
     width: 100%;
     border: 1px solid var(--white-alpha-40);
     backdrop-filter: var(--backdrop-filter-blur);
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+.portfolio-popup.open .pp-content {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.5s ease;
+}
+
+.pp-header {
+    position: relative;
+}
+
+.pp-header .btn {
+    height: 40px;
+    width: 40px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: -40px;
+    top: -40px;
+}
+
+.pp-thumbnail img {
+    border-radius: 10px;
+}
+
+.pp-header h3 {
+    font-size: 25px;
+    text-transform: capitalize;
+    margin: 20px 0 15px;
+}
+
+.pp-body .description {
+    margin-bottom: 20px;
+}
+
+.pp-body .general-info li {
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.pp-body .general-info li span {
+    font-weight: 300;
+}
+
+.pp-body .general-info li a {
+    text-transform: lowercase;
+    color: var(--main-color);
 }
