--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
     line-height: 1.5;
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
-    padding: 5vh 15px;
+    padding: 35px 15px;
 }
 
 body.hide-scrolling {
@@ -89,7 +89,7 @@ ul {
 section {
     background-color: var(--white-alpha-25);
     border: 1px solid var(--white-alpha-40);
-    min-height: 90vh;
+    min-height: calc(100vh - 70px);
     border-radius: 30px;
     backdrop-filter: var(--backdrop-filter-blur);
 }
@@ -98,6 +98,7 @@ section {
     max-width: 1200px;
     margin: auto;
     transition: all 0.5s ease-in-out;
+    position: relative;
 }
 
 .main.fade-out {
@@ -209,7 +210,12 @@ button {
 /* Header */
 
 .header {
-    background-color: red;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 20px 0 0;
 }
 
 .header .nav-toggler {
@@ -223,6 +229,8 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 15px;
+    z-index: 1;
 }
 
 .header .nav-toggler span {
@@ -256,6 +264,48 @@ button {
 .header .nav-toggler:hover span::before,
 .header .nav-toggler:hover span::after {
     width: 50%;
+}
+
+.header .nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 35px 15px;
+}
+
+.header .nav-inner {
+    min-height: calc(100vh - 70px);
+    background-color: red;
+    max-width: 1200px;
+    margin: auto;
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--white-alpha-40);
+    backdrop-filter: var(--backdrop-filter-blur);
+    padding: 50px 0;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header .nav-inner ul li {
+    text-align: center;
+}
+
+.header .nav-inner ul li a {
+    font-size: 40px;
+    text-transform: capitalize;
+    color: var(--blue-dark);
+    display: block;
+    font-weight: 500;
+    padding: 8px 15px;
+    transition: color 0.3s ease;
+}
+
+.header .nav-inner ul li a:hover {
+    color: var(--main-color);
 }
 
 /* Home section */
