--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,16 @@ section {
     min-height: calc(100vh - 70px);
     border-radius: 30px;
     backdrop-filter: var(--backdrop-filter-blur);
+    display: none;
+}
+
+section.active {
+    display: block;
+    animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+section.fade-out {
+    animation: fadeOut 0.3s ease-in-out forwards;
 }
 
 .main {
@@ -131,7 +141,7 @@ section {
     justify-content: flex-end;
 }
 
-/* Section Title */
+/* ---------Section Title */
 
 .section-title {
     padding: 0 15px;
@@ -145,7 +155,7 @@ section {
     text-transform: capitalize;
 }
 
-/* Custome Scrollbar */
+/*---------- Custome Scrollbar */
 
 ::-webkit-scrollbar {
     width: 5px;
@@ -160,7 +170,7 @@ section {
 }
 
 
-/* Buttons */
+/*------- Buttons */
 
 button {
     font-family: inherit;
@@ -207,7 +217,117 @@ button {
     color: var(--white);
 }
 
-/* Header */
+/* --------Animation Keyframes */
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes zoomInOut {
+    0%, 100% {
+        transform: scale(0.5);
+    }
+    50% {
+        transform: scale(1);
+    }
+}
+
+@keyframes bounceTop {
+    0%, 100% {
+        transform: translateY(-50px);
+    }
+    50% {
+        transform: translateY(0px);
+    }
+}
+
+/* Background circles */
+
+.bg-circles {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    max-width: 1200px;
+    width: calc(100% - 30px);
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bg-circles div {
+    position: absolute;
+    border-radius: 50%;
+}
+
+.bg-circles .circle-1 {
+    height: 60px;
+    width: 60px;
+    background-color: var(--blue);
+    left: 5%;
+    top: 10%;
+    opacity: 0.3;
+    animation: zoomInOut 8s linear infinite;  /* this is set in Keyframes :) */
+}
+
+.bg-circles .circle-2 {
+    height: 80px;
+    width: 80px;
+    background-color: var(--main-color);
+    left: 30%;
+    top: 50%;
+    opacity: 0.4;
+    animation: bounceTop 5s ease-in-out infinite;  /* this is set in Keyframes :) */
+}
+
+.bg-circles .circle-3 {
+    height: 120px;
+    width: 120px;
+    background-color: var(--white);
+    top: 40%;
+    right: -60px;
+    opacity: 0.6;
+}
+
+.bg-circles .circle-4 {
+    height: 50px;
+    width: 50px;
+    background-color: var(--orange);
+    top: 80%;
+    left: -30px;
+    opacity: 0.6;
+}
+
+/*-------- Overlay */
+
+.overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    z-index: 200;
+    visibility: hidden;
+}
+
+.overlay.active {
+    visibility: visible;
+}
+
+/* -------Header */
 
 .header {
     position: absolute;
@@ -216,6 +336,17 @@ button {
     width: 100%;
     z-index: 1;
     padding: 20px 0 0;
+}
+
+.header.active {
+    position: fixed;
+    top: 35px;
+    padding: 20px 15px;
+}
+
+.header.active .container {
+    max-width: 1200px;
+    margin: auto;
 }
 
 .header .nav-toggler {
@@ -231,6 +362,12 @@ button {
     justify-content: center;
     margin: 0 15px;
     z-index: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.header .nav-toggler.hide {
+    opacity: 0;
+    transition: none;
 }
 
 .header .nav-toggler span {
@@ -238,8 +375,12 @@ button {
     width: 24px;
     background-color: var(--main-color);
     position: relative;
+    transition: background-color 0.3s ease;
 }
 
+.header.active .nav-toggler span {
+    background-color: transparent;
+}
 .header .nav-toggler span::before,
 .header .nav-toggler span::after {
     content: '';
@@ -256,13 +397,21 @@ button {
     transform: translateY(-8px);
 }
 
+.header.active .nav-toggler span::before {
+    transform: rotate(45deg);
+}
+
 .header .nav-toggler span::after {
     right: 0;
     transform: translateY(8px);
 }
 
-.header .nav-toggler:hover span::before,
-.header .nav-toggler:hover span::after {
+.header.active .nav-toggler span::after {
+    transform: rotate(-45deg);
+}
+
+.header:not(.active) .nav-toggler:hover span::before,
+.header:not(.active) .nav-toggler:hover span::after {
     width: 50%;
 }
 
@@ -273,11 +422,16 @@ button {
     height: 100%;
     width: 100%;
     padding: 35px 15px;
+    overflow-y: auto;
+    visibility: hidden;
+}
+
+.header.active .nav {
+    visibility: visible;
 }
 
 .header .nav-inner {
     min-height: calc(100vh - 70px);
-    background-color: red;
     max-width: 1200px;
     margin: auto;
     background-color: var(--white-alpha-25);
@@ -288,6 +442,13 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+
+.header.active .nav-inner {
+    opacity: 1;
+
 }
 
 .header .nav-inner ul li {
@@ -302,17 +463,37 @@ button {
     font-weight: 500;
     padding: 8px 15px;
     transition: color 0.3s ease;
+    position: relative;
+}
+
+.header .nav-inner ul li a::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 50%;
+    width: 0;
+    background-color: var(--white-alpha-25);
+    z-index: -1;
+    transition: width 0.5s ease;
+}
+
+.header .nav-inner ul li a:hover::before {
+    width: 100%;
 }
 
 .header .nav-inner ul li a:hover {
     color: var(--main-color);
 }
 
-/* Home section */
+/* -----------------Home section */
 
 .home-section {
-    display: flex;
     padding: 120px 0;
+}
+
+.home-section.active {
+    display: flex;
 }
 
 .home-text,
@@ -354,7 +535,7 @@ button {
     border-radius: 50%;
 }
 
-/* About Section */
+/* ---------------About Section */
 
 .about-img {
     width: 40%;
@@ -709,4 +890,18 @@ button {
 .contact-info-item .social-links a:hover {
     color: var(--white);
     background-color: var(--main-color);
+}
+
+/* Responsive --------------   */
+
+@media (max-width: 991px) {
+
+}
+
+@media (max-width: 767px) {
+    
+}
+
+@media (max-width: 575px) {
+    
 }
