added neon button div and anchor in html, added neon button styles in css

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
     --white-alpha-40:rgba(255,255,255,0.40);
     --white-alpha-25:rgba(255,255,255,0.25);
     --backdrop-filter-blur:blur(5px);
+
+    --clr-neon: #ffffff;
+    --clr-bg: hsl(323 21% 16%);
 }
 
 
@@ -217,6 +220,77 @@ button {
     color: var(--white);
 }
 
+/* Neon Button */
+
+.neon-btn {
+    font-size: 1rem;
+
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--clr-neon);
+    border: var(--clr-neon) 0.125em solid;
+    border-radius: 1.5em;
+    padding: 0.25em 1em;
+
+    text-shadow:          /* we are putting 2 text shadows here */
+    0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.25em currentColor ; /* 0 ofset 0 ofest 0.25em of Blur effect // currentColor is same as color from var */
+    
+    box-shadow: inset 0 0 0.5em 0 var(--clr-neon),  /* inset adds shadow to the inside of element */
+    0 0 0.5em 0 var(--clr-neon);
+    position: relative;
+    top: 42px;
+    left: 15px;
+
+
+    /* transition: background-color 500ms linear;  after you move the pointer from button */
+}
+
+.neon-btn::before {
+    pointer-events: none;    /* this makes the bottom part where shadow is "unclickable" */
+    content: '';
+    position: absolute;
+    top: 110%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--clr-neon);
+
+    transform: perspective(1.5em) rotateX(40deg) scale(1, 0.4);  /* without perspective it wouldn't work same way */
+    filter: blur(0.8em);
+    opacity: 0.7;
+}
+
+.neon-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    box-shadow: 0 0 2em 0.5em var(--clr-neon);
+    opacity: 0;
+    background-color: var(--clr-neon);
+    z-index: -1;
+    transition: opacity 100ms linear;
+}
+
+.neon-btn:hover,
+.neon-btn:focus {
+    color: var(--clr-bg);
+    text-shadow: none;
+}
+
+.neon-btn:hover::before,
+.neon-btn:focus::before,
+.neon-btn:hover::after,
+.neon-btn:focus::after  {
+    opacity: 1;
+}
+
 /* --------Animation Keyframes */
 
 @keyframes fadeIn {
@@ -239,7 +313,7 @@ button {
 
 @keyframes zoomInOut {
     0%, 100% {
-        transform: scale(0.5);
+        transform: scale(0.2);
     }
     50% {
         transform: scale(1);
@@ -294,8 +368,8 @@ button {
     height: 60px;
     width: 60px;
     background-color: var(--blue);
-    left: 5%;
-    top: 10%;
+    left: 16%;
+    top: 22%;
     opacity: 0.3;
     animation: zoomInOut 8s linear infinite;  /* this is set in Keyframes :) */
 }
