--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,6 @@ button {
     bottom: 0;
     width: 100%;
     height: 100%;
-
     transform: perspective(1.5em) rotateX(40deg) scale(1, 0.4);  /* without perspective it wouldn't work same way */
     filter: blur(0.8em);
     opacity: 0.7;
@@ -274,14 +273,15 @@ button {
     box-shadow: 0 0 2em 0.5em var(--clr-neon);
     border-radius: 1.5em;
     opacity: 0;
-    background-color: var(--pink-light);
+    /* background-color: var(--white); */
     z-index: -1;
     transition: opacity 100ms linear;
 }
 
 .neon-btn:hover,
 .neon-btn:focus {
-    color: var(--white);
+    color: var(--pink-light);
+    background-color: var(--pink-light);
     text-shadow: none;
     font-weight: 500;
 }
