--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/*fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
 /* variables */
 :root{
     --main-color: #387be0;
@@ -8,14 +5,14 @@
     --blue-dark:#18293c;
     --orange:#ffa500;
     --green-yellow:#cddc39;
-    --pink-light:#39a7e7;
-    --cyan-light:#be48f5;
+    --pale-blue:#39a7e7;
+    --bright-pink:#be48f5;
     --neon-green:rgb(68, 242, 62);
     --green-bright: #00ff66;
     --white:#ffffff;
     --white-alpha-40:rgba(255,255,255,0.40);
     --white-alpha-25:rgba(255,255,255,0.25);
-    --backdrop-filter-blur:blur(5px);
+    --backdrop-filter-blur:blur(5px); /* still not supported in Firefox! */
 
     --clr-neon: #ffffff;
     --clr-bg: hsl(323 21% 16%);
@@ -37,10 +34,10 @@
 
 body {
     min-height: 100vh;
-    background-image: linear-gradient(to bottom right, var(--pink-light), var(--cyan-light));
+    background-image: linear-gradient(to bottom right, var(--pale-blue), var(--bright-pink));
     background-attachment: fixed;
     font-size: 16px;
-    font-family: 'Roboto', sans-serif; /* I added this from google fonts Roboto */
+    font-family: 'Fira Code', monospace; /* I added this from google fonts Roboto */
     font-weight: 300;
 
     color: var(--blue-dark);
@@ -281,8 +278,8 @@ button {
 
 .neon-btn:hover,
 .neon-btn:focus {
-    color: var(--pink-light);
-    background-color: var(--pink-light);
+    color: var(--pale-blue);
+    background-color: var(--pale-blue);
     text-shadow: none;
     font-weight: 500;
 }
@@ -500,8 +497,40 @@ button {
     flex-direction: row;
     list-style: none;
     gap: 1rem;
-    justify-content: center;
+    justify-content: flex-start;
     margin-left: 1rem;
+}
+
+/*      -----------     MENU BAR NAV  --------        */
+
+.main-menu-bar {
+    display: flex;
+    align-items: flex-end;
+	margin-top: 5px;
+
+}
+.main-menu-bar a {
+	padding: 10px 15px;
+	text-transform: capitalize;
+	text-align: center;
+	display: block;
+
+    color: var(--main-color);
+    font-weight: 500;
+	font-size: 16px;
+}
+
+.main-menu-bar a:hover {
+	color: #ffffff;
+}
+
+
+.header-panel {
+	padding-top: .2em;
+	padding-bottom: .2em;
+	border: 1px solid var(--white-alpha-40);
+	background-color: var(--white-alpha-25);
+	border-radius: 20px;
 }
 
 
@@ -637,11 +666,11 @@ button {
     position: absolute;
     right: 0;
     bottom: 0;
-    height: 50%;
+    height: 90%;
     width: 0;
     background-color: var(--white-alpha-25);
     z-index: -1;
-    transition: width 0.5s ease;
+    transition: width 0.2s ease;
 }
 
 .header .nav-inner ul li a:hover::before {
@@ -1062,9 +1091,9 @@ button {
 /* Responsive --------------   */
 
 @media (max-width: 991px) {
-    .container {
+    /* .container {
         padding: 0;
-    }
+    } */
     .home-text,
     .home-img {
         width: 100%;
@@ -1147,3 +1176,5 @@ button {
         font-size: 20px;
     }
 }
+
+
