--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ section {
     background-color: var(--white-alpha-25);
     border: 1px solid var(--white-alpha-40);
     min-height: calc(100vh - 70px);
-    border-radius: 30px;
+    border-radius: 10px;
     backdrop-filter: var(--backdrop-filter-blur);
     display: none;
 }
@@ -154,13 +154,14 @@ section.fade-out {
 
 .section-title h2 {
     font-size: 40px;
+    margin-top: 1.5rem;
     text-transform: capitalize;
 }
 
-/*---------- Custome Scrollbar */
+/*---------- Custom Scrollbar */
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 1rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -185,7 +186,7 @@ button {
     border: 1px solid var(--white-alpha-40);
     padding: 10px 28px;
     display: inline-block;
-    border-radius: 30px;
+    border-radius: 10px;
     color: var(--main-color);
     font-weight: 500;
     text-transform: capitalize;
@@ -464,7 +465,7 @@ button {
 .page-loader div {
     border: 2px solid transparent;
     position: absolute;
-    border-radius: 50%;
+    border-radius: 10px;
     opacity: 0.6;
     border-top-color: transparent !important;
     border-bottom-color: transparent !important;
@@ -497,7 +498,7 @@ button {
     flex-direction: row;
     list-style: none;
     gap: 1rem;
-    justify-content: flex-start;
+    justify-content: center;
     margin-left: 1rem;
 }
 
@@ -505,32 +506,38 @@ button {
 
 .main-menu-bar {
     display: flex;
-    align-items: flex-end;
+    justify-content: space-evenly;
 	margin-top: 5px;
 
 }
 .main-menu-bar a {
 	padding: 10px 15px;
-	text-transform: capitalize;
+	text-transform: uppercase;
 	text-align: center;
 	display: block;
 
-    color: var(--main-color);
-    font-weight: 500;
-	font-size: 16px;
+    color: var(--white);
+    font-weight: 700;
+	font-size: 19px;
 }
 
 .main-menu-bar a:hover {
-	color: #ffffff;
+	color: var(--main-color);
 }
 
 
 .header-panel {
-	padding-top: .2em;
-	padding-bottom: .2em;
+    width: 100%;
+	padding-top: 0.2em;
+	padding-bottom: 0.2em;
 	border: 1px solid var(--white-alpha-40);
 	background-color: var(--white-alpha-25);
-	border-radius: 20px;
+	border-radius: 10px;
+}
+
+.main-menu-bar li {
+    border-left: 2px solid var(--white-alpha-25);
+    border-right: 2px solid var(--white-alpha-25);
 }
 
 
@@ -633,7 +640,7 @@ button {
     border: 1px solid var(--white-alpha-40);
     backdrop-filter: var(--backdrop-filter-blur);
     padding: 50px 0;
-    border-radius: 30px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -721,14 +728,14 @@ button {
 .home-img .img-box {
     max-width: 360px;
     background-color: var(--white-alpha-25);
-    border-radius: 50%;
+    border-radius: 10px;
     border: 8px solid var(--white-alpha-25);
     margin: auto;
 }
 
 .home-img .img-box img {
     width: 100%;
-    border-radius: 50%;
+    border-radius: 10px;
 }
 
 /* ---------------About Section */
@@ -772,7 +779,7 @@ button {
     padding: 5px 15px;
     text-transform: capitalize;
     margin: 0 10px 10px 0;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .about-tabs {
@@ -862,7 +869,7 @@ button {
     background-color: var(--main-color);
     left: 0;
     top: 16px;
-    border-radius: 50%;
+    border-radius: 10px;
 }
 
 .about-text .timeline-item:last-child {
@@ -953,7 +960,7 @@ button {
 .pp-content {
     background-color: var(--white-alpha-25);
     padding: 30px;
-    border-radius: 30px;
+    border-radius: 10px;
     max-width: 900px;
     width: 100%;
     border: 1px solid var(--white-alpha-40);
@@ -980,8 +987,8 @@ button {
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: -40px;
-    top: -40px;
+    right: -50px;
+    top: -50px;
 }
 
 .pp-thumbnail img {
@@ -1036,7 +1043,7 @@ button {
     display: block;
     width: 100%;
     height: 50px;
-    border-radius: 25px;
+    border-radius: 10px;
     border: none;
     font-family: inherit;
     font-weight: 400;
@@ -1078,7 +1085,7 @@ button {
     background-color: var(--white-alpha-25);
     border: 1px solid var(--white-alpha-40);
     color: var(--main-color);
-    border-radius: 50%;
+    border-radius: 10px;
     margin: 6px 4px 0 0;
     transition: all 0.3s ease;
 }
@@ -1147,7 +1154,7 @@ button {
             height: 50px;
             border: none;
             cursor: pointer;
-            border-radius: 50%;
+            border-radius: 25%;
             background-color: var(--white-alpha-25);
             border: 1px solid var(--white-alpha-40);
             display: flex;
