--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ button {
 
 .bg-circles div {
     position: absolute;
-    border-radius: 10%;
+    border-radius: 50%;
 }
 
 .bg-circles .circle-1 {
@@ -318,7 +318,7 @@ button {
 .bg-circles .circle-3 {
     height: 120px;
     width: 120px;
-    background-color: var(--green-bright);
+    background-color: var(--main-color);
     top: 20%;
     right: -60px;
     opacity: 0.6;
@@ -327,7 +327,7 @@ button {
 .bg-circles .circle-4 {
     height: 50px;
     width: 50px;
-    background-color: var(--green-bright);
+    background-color: var(--green-yellow);
     top: 20%;
     left: -30px;
     opacity: 0.6;
@@ -380,9 +380,9 @@ button {
 .square-2 {
     height: 60px;
     width: 60px;
-    background-color: var(--white);
-    right: 35%;
-    top: 40%;
+    background-color: var(--blue);
+    right: 71%;
+    top: 88%;
     opacity: 0.3;
 }
 
