--- a/css/style.css
+++ b/css/style.css
@@ -1180,3 +1180,14 @@ footer a {
 }
 
 
+
+
+#hello-text::after {
+    content: "|";
+    animation: blink 1s infinite;
+  }
+  
+  @keyframes blink {
+    0%, 100% {opacity: 1;}
+    50% {opacity: 0;}
+  }
