--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 body {
     min-height: 100vh;
-    background-image: linear-gradient(to bottom right, var(--pale-blue), var(--bright-pink));
+    background-image: linear-gradient(to bottom right, var(--pale-blue), rgb(46, 163, 125));
     background-attachment: fixed;
     font-size: 16px;
     font-family: 'Fira Code', monospace; /* I added this from google fonts Roboto */
@@ -107,7 +107,7 @@ section.fade-out {
 }
 
 .main {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: auto;
     transition: all 0.5s ease-in-out;
     position: relative;
@@ -207,7 +207,7 @@ button {
     top: 0;
     height: 100%;
     width: 0%;
-    background-color: var(--main-color);
+    background-color: #4aadcd;
     z-index: -1;
     transition: width 0.3s ease;
 }
